[package]
name = "rr"
version = "0.3.0"
edition = "2021"
description = "A Rhai scripting runner Swiss Tool for Devops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dirs = "4.0.0"
rhai = { version = "1.9.1", features = ["serde", "metadata"] }
regex = "1.6.0"
serde = "1.0.144"
