[package]
name = "rr"
version = "0.4.0"
edition = "2021"
description = "A Rhai scripting runner Swiss Tool for Devops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dirs = "4.0.0"
rhai = { version = "1.10.0", features = ["serde", "metadata"] }
rhai-rand = "0.1"
rhai-env = { git = "https://github.com/sevir/rhai-env.git" }
rhai_http = { git = "https://github.com/sevir/rhai-http.git" }
regex = "1.6.0"
serde = "1.0.144"
